# td-agent

./: .travis.yml  Makefile.am  README.md  REVISION  VERSION  autogen.sh  configure.in  make-deb-experimental.sh  make-deb-init.sh  make-deb.sh  make-deb5.sh  make-rpm-experimental.sh  make-rpm.sh  td-agent.conf  td-agent.prelink.conf
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
debian/: README.Debian  README.source  changelog  control  copyright  default  dirs  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  examples  init.d  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postinst.ex  postrm  postrm.ex  preinst.ex  prerm.ex  rules  td-agent.cron.d.ex  td-agent.default.ex  td-agent.doc-base.EX  td-agent.init  td-agent.logrotate  td-agent.postinst  td-agent.postrm  trd-agent.cron.d.ex  trd-agent.default.ex  trd-agent.doc-base.EX  trd-agent.init  trd-agent.postrm  watch.ex
debian/source/: include-binaries  include-binaries~
example-clients/: php-client.php  tornado-client.py
homebrew/: td-agent.rb
redhat/: td-agent-experimental.spec  td-agent.init  td-agent.service  td-agent.spec  treasure-data.repo
